Search clients in orders

--- a/starweb/app/views/orders/_form.html.erb
+++ b/starweb/app/views/orders/_form.html.erb
@@ -28,6 +28,9 @@
       <option value="<%= sponsor.id %>"><%= sponsor.name %></option>
     <%end%>
   </select>
+
+  <%= link_to 'Nuevo', new_sponsor_path, class: 'btn btn-primary' %>
+
   <br><br>
 
   <div class="row ml-1">
