Added total sales in one day, filter invoices by dates and pagination for invoices

--- a/starweb/app/assets/stylesheets/style.scss
+++ b/starweb/app/assets/stylesheets/style.scss
@@ -144,9 +144,10 @@ footer {
   margin-bottom: 50px;
 }
 
-.clearfix {
-  display: none !important;
+.select2-container--default .select2-selection--single {
+  width: unset !important;
 }
+
 
 @media print {
   html, body {
