--- a/starweb/app/views/orders/_form.html.erb
+++ b/starweb/app/views/orders/_form.html.erb
@@ -1,14 +1,24 @@
 <%= simple_form_for order, defaults: { label_html: { class: 'font-weight-bold' } } do |form| %>
   <%= form.error_notification %>
 
-  <div class="input-group mb-3">
-    <div class="input-group-prepend">
-      <label class="input-group-text" for="inputGroupSelect01">Cliente</label>
-      <%= form.select :client_id, Client.all.collect {|p| [ "#{p.first_name} #{p.last_name} #{p.doc_ruc}", p.id ] }, {prompt: 'Selecciona el Cliente'}, class: 'form-control', id: 'e1' %>
+  <% if order.paid == 'Pagado' %>
+    <div class="input-group mb-3">
+      <div class="input-group-prepend">
+        <label class="input-group-text" for="inputGroupSelect01">Cliente</label>
+        <%= form.select :client_id, Client.all.collect {|p| [ "#{p.first_name} #{p.last_name} #{p.doc_ruc}", p.id ] }, {prompt: 'Selecciona el Cliente'}, disabled: true, class: 'form-control', id: 'e1' %>
+      </div>
+      <%= link_to 'Nuevo', new_client_path, class: 'btn btn-info' %>
     </div>
-    <%= link_to 'Nuevo', new_client_path, class: 'btn btn-info' %>
-  </div>
 
+  <% else %>
+    <div class="input-group mb-3">
+      <div class="input-group-prepend">
+        <label class="input-group-text" for="inputGroupSelect01">Cliente</label>
+        <%= form.select :client_id, Client.all.collect {|p| [ "#{p.first_name} #{p.last_name} #{p.doc_ruc}", p.id ] }, {prompt: 'Selecciona el Cliente'}, disabled: true, class: 'form-control', id: 'e1' %>
+      </div>
+      <%= link_to 'Nuevo', new_client_path, class: 'btn btn-info' %>
+    </div>
+  <% end %>
 
   <%= form.input :deliver_date, label: 'Fecha de entrega' %>
 
