--- a/starweb/app/views/orders/index.html.erb
+++ b/starweb/app/views/orders/index.html.erb
@@ -15,21 +15,33 @@
       <%= link_to 'Nuevo', new_order_path, class: 'btn btn-primary'%>
     <% end %>
   </div>
-  <!-- Filter by states-->
-  <div class="mr-3 form-inline">
-  <%= search_form_for @q, remote: true do |f| %>
-    <%= f.search_field :client_first_name_or_client_last_name_or_client_doc_ruc_cont, class: 'form-control mr-sm-2', autofocus: true, placeholder: 'Buscar por cliente' %>
-    <%= f.submit class: 'btn btn-outline-success my-2 my-sm-0' %>
-  <% end %>
-  </div>
 
-  <div class="mr-3 ml-3">
+  <!-- Search orders by clients-->
+  <div class="form-inline ml-3">
+    <%= search_form_for @q, remote: true do |f| %>
+      <%= f.search_field :client_first_name_or_client_last_name_or_client_doc_ruc_cont, class: 'form-control mr-sm-2', autofocus: true, placeholder: 'Buscar por cliente' %>
+      <%= f.submit class: 'btn btn-outline-success my-2 my-sm-0' %>
+    <% end %>
+  </div>
+  
+  <!-- Filter by states-->
+  <div class="ml-3 mr-3">
     <%= form_tag(orders_path, method: :get, class: 'form-inline') do %>
       <%= select_tag :state, options_for_select(["En espera", "Completado", "En proceso"]), prompt: "Todos", class: "form-control" %>
       <%= select_tag :paid, options_for_select(['Pagado', 'No pagado']), prompt: "Todos", class: "form-control" %>
       <%= submit_tag 'Filtrar', search: nil, class: 'btn btn-outline-success my-2 my-sm-0' %>
     <% end %>
   </div>
+
+  <!-- Filter by date of order-->
+  <div class="ml-3 form-inline">
+    <%= search_form_for @q, remote: true do |f| %>
+      Desde: <%= f.search_field :deliver_date_gteq ,class: 'form-control input-sm', type: 'date' %>
+      Hasta: <%= f.search_field :deliver_date_lteq, class: 'form-control input-sm', type: 'date' %>
+      <%= f.submit 'Filtrar', class: 'btn btn-outline-success my-2 my-sm-0' %>
+    <% end %>
+  </div>
+
 </div>
 
 <div id="list-orders">
