--- a/starweb/app/views/orders/show.html.erb
+++ b/starweb/app/views/orders/show.html.erb
@@ -60,12 +60,20 @@
               </p>
               <p>
                 <% if @order.state == 'En espera' %>
-                <p class='alert bg-danger text-white'><%= @order.state %></p>
-                <% elsif @order.state == 'En proceso' %>
-                <p class='alert bg-warning text-white'><%= @order.state %>
-                  <% else @order.state == 'Completado' %>
+                  <% if current_user.is_admin? or current_user.is_secretary? %>
+                  <p class='alert bg-danger text-white'><%= @order.state %></p>
+                <% elsif current_user.is_team? %>
+                  <p class="alert bg-danger text-white"><%= link_to @order.state, orders_state_path(@order), data: { confirm: 'Confirmar cambiar estado a en proceso' }, class: 'btn btn-primary' %></p>
+                <%end%>
+              <% elsif @order.state == 'En proceso' %>
+                <% if current_user.is_admin? or current_user.is_secretary? %>
+                  <p class='alert bg-warning text-white'><%= @order.state %>
+                <% elsif current_user.is_team? %></p>
+                  <p class="alert bg-warning text-white"><%= link_to @order.state, orders_state_path(@order), data: { confirm: 'Confirmar cambiar estado a completado?' }, class: 'btn btn-primary'  %></p>
+                <%end%>
+              <% else @order.state == 'Completado' %>
                   <p class='alert bg-success text-white'><%= @order.state %></p>
-                  <%end%>
+              <% end %>
                 </p>
                 <p>
                   <b>Notas</b><br><%= @order.notes %>
@@ -121,7 +129,9 @@
                     <td><%= order_detail.size %><br>
                     <td><%= order_detail.quantity %><br>
                       <% if current_user.is_secretary? %>
-                      <td style="width: 20px;"><%= link_to '' , order_detail, method: :delete, data: { confirm: 'Estás seguro?' }, class: "fas fa-trash"  %></td>
+                        <% if @order.paid == 'No pagado' %>
+                          <td style="width: 20px;"><%= link_to '' , order_detail, method: :delete, data: { confirm: 'Estás seguro?' }, class: "fas fa-trash"  %></td>
+                        <% end %>
                       <%end%>
                     </tr>
                     <% end %>
@@ -149,8 +159,10 @@
                     <div class="col-md-6 ml-3">
                       <div class="card-body">
                         <h4 class="card-title mt-2"><b><%= hasProduct.product_name %></b></h4>
-                        <% if @order.paid == 'No pagado' %>
-                            <%= link_to '' , hasProduct, method: :delete, data: { confirm: 'Estás seguro?' }, class: "fas fa-times-circle ml-3" %>
+                        <% if current_user.is_secretary? %>
+                          <% if @order.paid == 'No pagado' %>
+                              <%= link_to '' , hasProduct, method: :delete, data: { confirm: 'Estás seguro?' }, class: "fas fa-times-circle ml-3" %>
+                          <% end %>
                         <% end %>
                         <hr>
                         <p class="card-text">
@@ -162,9 +174,9 @@
                             <% if hasProduct.product.supplies.empty? %>
                               <p class="alert alert-warning">No ha asignado ningún insumo</p>
                             <% else %>
-                            <% hasProduct.product.supplies.each do |has_supply| %>
-                              <%= has_supply.name %></p>
-                            <% end %>
+                              <% hasProduct.product.supplies.each do |has_supply| %>
+                                <%= has_supply.name %></p>
+                              <% end %>
                             <% end %>
                         </p>
                       </div>
@@ -286,7 +298,30 @@
           </div>
         </div>
     <% end %>
-  <!-- /. PAGE INNER  -->
+
+    <!-- Modal -->
+    <div class="modal fade" id="discountStock" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h3 class="modal-title" id="exampleModalLabel">Total en moneda extranjera</h3>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+            <div id="form_order_detail" class="modal-body">
+              <% hasProduct.product.supplies.each do |has_supply| %>
+                <%= has_supply.name %></p>
+              <% end %>
+            </div>
+            <div class="modal-footer">
+              <a type="button" class="btn btn-primary"  onclick="return confirm('Estás seguro?')" href="/orders/pay/<%=@order.id%>"> Cobrar </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- /. PAGE INNER  -->
     </div>
     <!-- /. PAGE WRAPPER  -->
   </div>
