--- a/starweb/app/views/orders/show.html.erb
+++ b/starweb/app/views/orders/show.html.erb
@@ -69,7 +69,7 @@
                 <% if current_user.is_admin? or current_user.is_secretary? %>
                   <p class='alert bg-warning text-white'><%= @order.state %>
                 <% elsif current_user.is_team? %></p>
-                  <p class="alert bg-warning text-white"><%= link_to @order.state, orders_state_path(@order), data: { confirm: 'Confirmar cambiar estado a completado?' }, class: 'btn btn-primary'  %></p>
+                  <p class="alert bg-warning text-white"><button class="btn btn-primary" data-toggle="modal" data-target="#discountStock"><%= @order.state %></button></p>
                 <%end%>
               <% else @order.state == 'Completado' %>
                   <p class='alert bg-success text-white'><%= @order.state %></p>
@@ -174,9 +174,14 @@
                             <% if hasProduct.product.supplies.empty? %>
                               <p class="alert alert-warning">No ha asignado ningún insumo</p>
                             <% else %>
-                              <% hasProduct.product.supplies.each do |has_supply| %>
-                                <%= has_supply.name %></p>
-                              <% end %>
+                              <ul class="list-group">
+                                <% hasProduct.product.supplies.each do |has_supply| %>
+                                  <li class="list-group-item d-flex justify-content-between align-items-center">
+                                    <%= has_supply.name %>
+                                    <span class="badge badge-primary badge-pill"><%= has_supply.stock %></span>
+                                  </li>
+                                <% end %>
+                              </ul>
                             <% end %>
                         </p>
                       </div>
@@ -221,6 +226,7 @@
         <%end%>
         <%end%>
       </div>
+    </div>
 
       <!-- Modal -->
       <div class="modal fade" id="modalProduct" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -304,18 +310,23 @@
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h3 class="modal-title" id="exampleModalLabel">Total en moneda extranjera</h3>
+            <h3 class="modal-title" id="exampleModalLabel">Cantidad de insumos utilizados</h3>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
             <div id="form_order_detail" class="modal-body">
-              <% hasProduct.product.supplies.each do |has_supply| %>
-                <%= has_supply.name %></p>
+              <%= simple_form_for(@has_used_supply) do |f| %>
+                <%= f.hidden_field :order_id, value: @order.id  %>
+                <% @order.has_products.each do |hasProduct| %>
+                  <% hasProduct.product.supplies.each do |has_supply| %>
+                    <b><%= has_supply.name %></b><br>
+                    </b><input type="number" name="supplies[][<%= has_supply.id %>]", value="0", class="form-control"><br>
+                  <% end %>
+                <% end %>
+                <hr>
+                <%= f.button :submit, 'Descontar stock', data: { confirm: 'Completar pedido y descontar stock?' },class: 'btn btn-primary' %>
               <% end %>
-            </div>
-            <div class="modal-footer">
-              <a type="button" class="btn btn-primary"  onclick="return confirm('Estás seguro?')" href="/orders/pay/<%=@order.id%>"> Cobrar </a>
             </div>
           </div>
         </div>
