--- a/starweb/app/views/supplies/_list_supplies.html.erb
+++ b/starweb/app/views/supplies/_list_supplies.html.erb
@@ -14,7 +14,19 @@
             <h4 class="card-title"><b><%= supply.name %></b></h4>
             <hr>
             <p class="card-text">
-            <p><b>Stock</b><br><%= supply.stock %></p>
+              <% if current_user.is_secretary? %>
+                <div class="col-4 m-auto">
+                  <%= simple_form_for supply, defaults: { input_html: {class: 'text-center'}, label_html: { class: 'font-weight-bold' } } do |form| %>
+                    <%= form.error_notification %>
+
+                    <%= form.input :stock %>
+
+                    <%= form.submit 'Actualizar', class: 'btn btn-primary' %>
+                  <% end %>
+                </div>
+              <% else %>
+              <p><b>Descripción</b><br><%= supply.stock %></p>
+              <% end %>
             <p><b>Descripción</b><br><%= supply.description %></p>
           </div>
           <p><%= link_to '', edit_supply_path(supply), class: 'fas fa-edit' %> | <%= link_to '', supply, method: :delete, data: {  confirm: 'Estás seguro?' }, class: "fas fa-trash" %></p>
