--- a/starweb/app/views/partials/_navigation.html.erb
+++ b/starweb/app/views/partials/_navigation.html.erb
@@ -14,6 +14,7 @@
       <%= link_to(raw("<i class='fas fa-user-friends fa-lg '></i><br>Clientes"), clients_path, class: "list-group-item list-group-item-action") %>
       <%= link_to(raw("<i class='fas fa-boxes fa-lg '></i><br>Insumos"), supplies_path, class: "list-group-item list-group-item-action") %>
       <%= link_to(raw("<i class='fas fa-hands-helping fa-lg '></i><br>Auspiciantes"), sponsors_path, class: "list-group-item list-group-item-action") %>
+      <%= link_to(raw("<i class='fas fa-clipboard-list fa-lg '></i><br>Historial insumos"), has_used_supplies_path, class: "list-group-item list-group-item-action") %>
     <%end%>
   </div>
 </div>
