--- a/starweb/app/views/clients/index.html.erb
+++ b/starweb/app/views/clients/index.html.erb
@@ -17,6 +17,7 @@
     </div>
     <!-- Search -->
     <div class="mr-3 form-inline">
+      <%= link_to(raw("<i class='fas fa-trash fa-lg'></i>"), clients_trash_url, class: "btn btn-secondary mr-3") %>
       <%= search_form_for @q, remote: true do |f| %>
         <%= f.search_field :first_name_or_last_name_or_doc_ruc_or_email_or_city_or_country_cont, class: 'form-control mr-sm-2', autofocus: true %>
 
