--- a/starweb/app/views/orders/_form.html.erb
+++ b/starweb/app/views/orders/_form.html.erb
@@ -5,7 +5,7 @@
     <div class="input-group mb-3">
       <div class="input-group-prepend">
         <label class="input-group-text" for="inputGroupSelect01">Cliente</label>
-        <%= form.select :client_id, Client.all.collect {|p| [ "#{p.first_name} #{p.last_name} #{p.doc_ruc}", p.id ] }, {prompt: 'Selecciona el Cliente'}, disabled: true, class: 'form-control', id: 'e1' %>
+        <%= form.select :client_id, Client.where(in_trash: false).collect {|p| [ "#{p.first_name} #{p.last_name} #{p.doc_ruc}", p.id ] }, {prompt: 'Selecciona el Cliente'}, disabled: true, class: 'form-control', id: 'e1' %>
       </div>
       <%= link_to 'Nuevo', new_client_path, class: 'btn btn-info' %>
     </div>
@@ -14,7 +14,7 @@
     <div class="input-group mb-3">
       <div class="input-group-prepend">
         <label class="input-group-text" for="inputGroupSelect01">Cliente</label>
-        <%= form.select :client_id, Client.all.collect {|p| [ "#{p.first_name} #{p.last_name} #{p.doc_ruc}", p.id ] }, {prompt: 'Selecciona el Cliente'}, class: 'form-control', id: 'e1' %>
+        <%= form.select :client_id, Client.where(in_trash: false).collect {|p| [ "#{p.first_name} #{p.last_name} #{p.doc_ruc}", p.id ] }, {prompt: 'Selecciona el Cliente'}, class: 'form-control', id: 'e1' %>
       </div>
       <%= link_to 'Nuevo', new_client_path, class: 'btn btn-info' %>
     </div>
@@ -36,7 +36,7 @@
       <span class="select2-selection__choice__remove" role="presentation">×</span>Gorgeous Rubber Wallet</li>
     </ul>
 
-    <% Sponsor.all.each do |sponsor| %>
+    <% @sponsors.each do |sponsor| %>
       <option value="<%= sponsor.id %>"><%= sponsor.name %></option>
     <%end%>
   </select>
