--- a/starweb/app/views/sponsors/index.html.erb
+++ b/starweb/app/views/sponsors/index.html.erb
@@ -16,6 +16,7 @@
       <%= link_to 'Nuevo', new_sponsor_path, class: 'btn btn-primary' %>
     </div>
     <!-- Search -->
+    <%= link_to(raw("<i class='fas fa-trash fa-lg'></i>"), sponsors_trash_url, class: "btn btn-secondary mr-3") %>
     <%= render 'partials/search_by_name', q: @q %>
   </div>
 
