--- a/starweb/app/views/products/_list_products.html.erb
+++ b/starweb/app/views/products/_list_products.html.erb
@@ -49,7 +49,13 @@
                 </div>
               <%end%>
             </div>
-            <p><%= link_to '', edit_product_path(product) , class: 'fas fa-edit' %> | <%= link_to '', product, method: :delete, data: { confirm: 'Estás seguro?' }, class: "fas fa-trash"  %></p>
+            <br>
+            <% if product.in_trash == false %>
+              <%= link_to '', edit_product_path(product), class: 'fas fa-edit' %>
+              <%= link_to '' , product, method: :delete, data: { confirm: 'Estás seguro?' }, class: "fas fa-trash"  %>
+            <% else %>
+              <%= link_to '' , product, method: :delete, data: { confirm: 'Estás seguro?' }, class: "fas fa-recycle fa-lg"  %>
+            <% end %>
           </div>
         </div>
       </div>
