--- a/starweb/app/views/products/index.html.erb
+++ b/starweb/app/views/products/index.html.erb
@@ -14,6 +14,7 @@
       <%= link_to 'Nuevo', new_product_path, class: 'btn btn-primary' %>
     </div>
     <!-- Search -->
+    <%= link_to(raw("<i class='fas fa-trash fa-lg'></i>"), products_trash_url, class: "btn btn-secondary mr-3") %>
     <%= render 'partials/search_by_name', q: @q %>
   </div>
     <div id="list_products">
