Configure app for unit tests and tests with selenium

--- a/starweb/app/views/clients/new.html.erb
+++ b/starweb/app/views/clients/new.html.erb
@@ -10,7 +10,7 @@
 <hr>
 
 <div class="row">
-  <div class="col-12">
+  <div id="form" class="col-12">
        <%= render 'form', client: @client %><br>
   </div>
 </div>
