--- a/starweb/app/views/orders/show.html.erb
+++ b/starweb/app/views/orders/show.html.erb
@@ -109,7 +109,7 @@
             <hr>
             <h4>Detalles</h4>
             <% if @order.order_details.empty? %>
-            <p class="alert alert-warning">No ha agregado ningún detalle</p>
+            <p class="alert alert-warning">No se ha agregado ningún detalle</p>
             <% else %>
             <div class="table-responsive">
               <table class="table table-striped table-bordered table-hover">
@@ -148,7 +148,7 @@
           <h4>Productos</h4>
           <hr>
           <% if @order.has_products.empty? %>
-            <p class="alert alert-warning">No ha agregado ningún producto</p>
+            <p class="alert alert-warning">No se ha agregado ningún producto</p>
           <% else %>
             <% @order.has_products.each do |hasProduct| %>
               <div class="card border-primary col-md-12">
@@ -169,10 +169,10 @@
                           <p><b>Frontal</b> <br><%= hasProduct.specs_f %></p>
                           <p><b>Dorso</b> <br><%= hasProduct.specs_b %></p>
                           <p><b>Cantidad</b> <br><%= hasProduct.quantity %></p>
-                          <p><b>Notas</b> <br><%= hasProduct.color %></p>
+                          <p><b>Notas</b> <br><%= hasProduct.notes %></p>
                           <p><b>Insumos</b> <br>
                             <% if hasProduct.product.supplies.empty? %>
-                              <p class="alert alert-warning">No ha asignado ningún insumo</p>
+                              <p class="alert alert-warning">No se ha asignado ningún insumo</p>
                             <% else %>
                               <ul class="list-group">
                                 <% hasProduct.product.supplies.each do |has_supply| %>
@@ -319,9 +319,13 @@
               <%= simple_form_for(@has_used_supply) do |f| %>
                 <%= f.hidden_field :order_id, value: @order.id  %>
                 <% @order.has_products.each do |hasProduct| %>
-                  <% hasProduct.product.supplies.each do |has_supply| %>
-                    <b><%= has_supply.name %></b><br>
-                    </b><input type="number" name="supplies[][<%= has_supply.id %>]", value="0", class="form-control"><br>
+                  <% if hasProduct.product.supplies.empty? %>
+                    <p class="alert alert-warning">Advertencia: Un producto no tiene asignado ningún insumo</p>
+                  <% else %>
+                    <% hasProduct.product.supplies.each do |has_supply| %>
+                      <b><%= has_supply.name %></b><br>
+                      </b><input type="number" name="supplies[][<%= has_supply.id %>]", value="0", class="form-control"><br>
+                    <% end %>
                   <% end %>
                 <% end %>
                 <hr>
